# perfi

./: .flaskenv  .gitignore  LICENSE  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  readme.md  run.py
.github/: dependabot.yml
server/: .flaskenv  .gitignore  Dockerfile  alembic.ini  conftest.py  main.py  pfd.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 2025_03_11_2234-77f6a9154db4_initial.py  2025_03_11_2248-8adbdb54a4df_initial.py  2025_03_15_1228-15ac639408bc_associate_categories_with_users.py  2025_03_15_1242-7249dfc19dd1_make_transaction_category_nullable.py  2025_03_15_1328-5d10ad89314d_initial.py  2025_03_15_1503-5865eeb9f7e3_initial.py
server/app/: __init__.py  models.py  routes.py
server/app/cli/: __init__.py  aliased_group.py  cli.py  db_admin.py  dbx.py
server/app/exceptions/: __init__.py  api_error.py  base.py  not_found.py  programming_error.py  user_error.py  validation.py
server/app/models/: __init__.py  account.py  base_model.py  category.py  refresh_token.py  transaction.py  transactions_file.py  user.py
server/app/repositories/: __init__.py  base.py  refresh_token.py  repositories.py  transactions_file_repository.py  user.py
server/app/routes/: __init__.py  accounts.py  auth.py  example.py  file_import.py  main.py  transactions.py
server/app/services/: __init__.py  accounts.py  auth.py  authenticated_transactions.py  file_import.py  local_file.py  transactions.py  user.py
server/app/utils/: __init__.py  date_utils.py  password.py
server/app/validators/: __init__.py  transaction_amount.py  uuid.py
server/cli/: __init__.py
server/config/: __init__.py  alembic.py  database.py  environment.py  logging.j2  logging.py  migrations.py  settings.py
server/config/environments/: __init__.py  default.py  development.py  testing.py
server/config/initializers/: __init__.py
server/config/logging/: __init__.py  disable_logger.py  formatter.py  logging.yml
server/config/logging_/: __init__.py  logging.yml
server/database/: __init__.py  seeds.py
server/database/models/: __init__.py  account.py  models.py  timestamp_mixin.py  transaction.py  transactions_file.py  user.py
server/database/seed_data/: accounts.json  transactions.json  users.json
server/db/: session_manager.py
server/initializers/: __init__.py  app_logger.py  init_extensions.py  load_environment.py  logger.py
server/migrations/: env.py
server/migrations/versions/: 2024_12_28_1550-48da58dfba79_initial_migration.py  2024_12_29_0204-7176f4046dec_compare_models_and_database.py  2024_12_29_2018-015aeec668bf_create_refresh_tokens_table_and_.py  2025_01_05_1601-ba8d58bf1d5e_initial_migration.py  4135ca824aaa_.py  648f0af4b146_.py  7bf73bd273e3_.py  ac79b6c59474_.py  bff8f25b91f1_.py  fbd29bf4605b_.py  fc7a9aac30eb_.py
server/perfi/: __init__.py  entry.py  test.py
server/perfi/cli/: cli.py
server/perfi/core/: middleware.py
server/perfi/models/: __init__.py  refresh_token.py
server/tests/: conftest.py  constants.py  factories.py  test_config.py  test_migrations.py  test_sample.py  test_user.py  utils.py
(+288 files in other folders)
